pariing down the final ln2 equiped jboss bundle.